# KlarityApp

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  fix_all_typing.py  fix_future_import.py  fix_typing.py  patch_pbx.py  tasks.md
apps/macos/: project.yml  (+3 more)
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  chat.py  health.py  meetings.py  people.py  summaries.py  tasks.py  transcript.py
backend/app/core/: config.py
backend/app/db/: database.py  schema.sql
backend/app/models/: __init__.py  job.py  meeting.py  person.py  setting.py  speaker.py  summary.py  task.py  transcript.py
backend/app/prompts/: summary_prompt.txt
backend/app/schemas/: __init__.py  meeting.py  person.py  settings.py  speaker.py  summary.py  task.py  transcript.py
backend/app/services/audio/: preprocessor.py
backend/app/services/chat/: __init__.py  agent.py  tools.py
backend/app/services/embeddings/: audio_utils.py  speaker_embedding.py
backend/app/services/storage/: file_layout.py
backend/app/services/summarization/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  prompt_builder.py
backend/app/services/transcription/: base.py  elevenlabs_provider.py
backend/app/workers/: processing_worker.py
backend/models/: README.md
backend/tests/: test_audio.py  test_meetings.py  test_tasks.py
docs/: AUDIO_RECORDING_ARCHITECTURE.md  architecture.md  build-plan-prompt.md  prd-personal-ai-meeting-assistant.md  running-the-app.md
scripts/: build.sh  bundle_backend.sh
(+63 files in other folders)
